Fix all Eclipse warnings under cesecore-common/org.cesecore.certificates.*